--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,2 +1,30 @@
-Install-Module -Name Az -Repository PSGallery -Force
-Connect-AzAccount
+on:
+    push:
+      branches: [ main ]
+     name: storageaccount
+    jobs:
+        PowerShellDemo:
+          name: "PowerShell Demo"
+          runs-on: ubuntu-latest
+      
+          steps:
+            - name: Build Module
+              shell: pwsh
+              run: Invoke-Build -Task ModuleBuild
+
+            - name: Login via Az module
+              uses: azure/login@v1
+              with:
+              creds: ${{secrets.AZURE_CREDENTIALS}}
+              enable-AzPSSession: true
+
+            - name: Create an RG and SA
+              uses: azure/powershell@v1
+              with:
+               inlineScript: |
+                Install-Module -Name Az -Repository PSGallery -Force 
+                $rg = New-AzResourceGroup -Name 'New Resource Group' -Location 'West US 2'
+                New-AzStorageAccount -ResourceGroupName $rg.Name -Location $rg.Location -Name 'superawesomedemosa' -SkuName Standard_LRS
+                azPSVersion: "latest"
+    
+     
