trigger from dev branch

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,6 +1,6 @@
 on:
     push:
-      branches: [ main ]
+      branches: [ dev-branch ]
      name: storageaccount
     jobs:
         PowerShellDemo:
